--- a/BCATPAngular8EF/ClientApp/src/styles.css
+++ b/BCATPAngular8EF/ClientApp/src/styles.css
@@ -15,9 +15,9 @@ code {
   border-color: #1861ac;
 }
 
-* {
+/** {
   font-size: 1.0rem;
-}
+}*/
 .no-padding {
   padding: 0;
 }
